--- a/package.json
+++ b/package.json
@@ -1,38 +1,36 @@
 {
-  "name": "interactive-globe",
+  "name": "threejs-ts-starter",
   "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "description": "Simple starter for Three.js projects with TypeScript",
+  "main": "index.html",
+  "repository": "https://github.com/mayacoda/simple-threejs-typescript-starter",
+  "author": "Maya Nedeljković Batić",
+  "license": "MIT",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "cleanup": "node ./scripts/cleanup.js",
+    "prepare": "husky install",
+    "preinstall": "git submodule update --init --recursive"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "type": "module",
+  "dependencies": {
+    "lil-gui": "^0.18.2",
+    "three": "^0.157.0"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/three": "^0.156.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.3.0",
+    "prettier": "2.8.8",
+    "sass": "^1.69.0",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.11",
+    "vite-plugin-glsl": "^1.1.2"
+  },
+  "packageManager": "yarn@3.2.1",
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
