--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
   },
   "type": "module",
   "dependencies": {
+    "@types/d3": "^7.4.3",
+    "@types/openlayers": "^4.6.23",
+    "@types/topojson": "^3.2.6",
+    "d3": "^7.8.5",
     "lil-gui": "^0.18.2",
+    "ol": "^8.2.0",
     "three": "^0.157.0"
   },
   "devDependencies": {
